@@ -158,3 +158,7 @@ Files = "/etc/DISTRO_SPECS"
 [Wary Puppy]
 Image = "Puppy.png"
 Files = "/etc/DISTRO_SPECS"
+
+[Turbolinux]
+Image = "Turbo.png"
+Files = "/etc/turbolinux-release"
